# 24TradeX

./: .env  .gitignore  .replit  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  GITHUB_CHECKLIST.md  README.md  TESTING_REPORT.md  db.sqlite3  db.sqlite3.backup  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  test_api.py  test_comprehensive.py
apps/accounts/: authentication.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_unique_id.py  0003_alter_user_username.py  0004_user_hierarchy_indexes.py
apps/admin_dashboard/: permissions.py  views.py
apps/dashboard/: urls.py
apps/notifications/: urls.py
apps/notifications/migrations/: 0001_initial.py
apps/purchases/: admin.py  serializers.py  urls.py  views.py
apps/purchases/migrations/: 0002_purchase_approved_coin_amount_and_more.py
apps/settings_app/: models.py  serializers.py  views.py
apps/settings_app/migrations/: 0001_initial.py  0002_systemsettings_coin_rate_and_more.py  0003_systemsettings_sold_coins_and_more.py
apps/sponsor/: urls.py
apps/withdrawals/: admin.py  models.py  urls.py  views.py
artifacts/24tradex/: index.html  package.json
attached_assets/: Pasted-IMPORTANT-READ-CAREFULLY-AND-FOLLOW-STRICTLY-You-MUST-b_1778479512950.txt
backend/: .env.example  Pipfile  requirements.txt  start.sh
backend/tradex/: db.sqlite3
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
lib/api-spec/: openapi.yaml
scripts/: setup-local.ps1  setup-local.sh
tradex/: settings.py  urls.py  wsgi.py
(+90 files in other folders)
